--- a/TreeTest/Base.lproj/Main.storyboard
+++ b/TreeTest/Base.lproj/Main.storyboard
@@ -677,20 +677,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <pathControl verticalHuggingPriority="750" misplaced="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e9v-pq-uPi">
-                                <rect key="frame" x="23" y="24" width="404" height="15"/>
-                                <pathCell key="cell" controlSize="small" selectable="YES" editable="YES" alignment="left" id="go4-yt-lHl">
-                                    <font key="font" metaFont="smallSystem"/>
-                                    <url key="url" string="file://localhost/Applications/"/>
-                                    <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </pathCell>
-                                <connections>
-                                    <action selector="pathControlAction:" target="XfG-lQ-9wD" id="phC-px-0IU"/>
-                                    <outlet property="delegate" destination="XfG-lQ-9wD" id="YgG-eU-C5Q"/>
-                                </connections>
-                            </pathControl>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FaE-lU-clW">
-                                <rect key="frame" x="20" y="48" width="410" height="232"/>
+                                <rect key="frame" x="20" y="20" width="410" height="232"/>
                                 <clipView key="contentView" id="yBw-1R-GgR">
                                     <rect key="frame" x="1" y="17" width="238" height="117"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -702,7 +690,7 @@
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="116" minWidth="40" maxWidth="1000" id="UcQ-J5-eOn">
+                                                <tableColumn identifier="tree" width="300" minWidth="40" maxWidth="1000" id="UcQ-J5-eOn">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -715,7 +703,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 </tableColumn>
-                                                <tableColumn identifier="AutomaticTableColumnIdentifier.1" width="286" minWidth="40" maxWidth="1000" id="zTq-LU-AA4">
+                                                <tableColumn identifier="coordinate" width="102" minWidth="40" maxWidth="1000" id="zTq-LU-AA4">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -750,16 +738,30 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
+                            <pathControl verticalHuggingPriority="750" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e9v-pq-uPi">
+                                <rect key="frame" x="20" y="265" width="410" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="dTO-1U-8j5"/>
+                                </constraints>
+                                <pathCell key="cell" controlSize="small" selectable="YES" editable="YES" alignment="left" id="go4-yt-lHl">
+                                    <font key="font" metaFont="smallSystem"/>
+                                    <url key="url" string="file://localhost/Applications/"/>
+                                    <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </pathCell>
+                                <connections>
+                                    <action selector="pathControlAction:" target="XfG-lQ-9wD" id="phC-px-0IU"/>
+                                    <outlet property="delegate" destination="XfG-lQ-9wD" id="YgG-eU-C5Q"/>
+                                </connections>
+                            </pathControl>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="FaE-lU-clW" secondAttribute="trailing" constant="20" id="2Z7-LY-svq"/>
-                            <constraint firstItem="FaE-lU-clW" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="7BL-oO-xe9"/>
-                            <constraint firstItem="e9v-pq-uPi" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="260" id="EEm-Ca-rhb"/>
-                            <constraint firstAttribute="bottom" secondItem="e9v-pq-uPi" secondAttribute="bottom" constant="20" id="Gt7-cl-9D0"/>
-                            <constraint firstItem="e9v-pq-uPi" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="InU-Be-mSl"/>
-                            <constraint firstItem="FaE-lU-clW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="JgO-1o-IY6"/>
-                            <constraint firstItem="e9v-pq-uPi" firstAttribute="top" secondItem="FaE-lU-clW" secondAttribute="bottom" constant="8" id="MbL-ZQ-grz"/>
-                            <constraint firstAttribute="trailing" secondItem="e9v-pq-uPi" secondAttribute="trailing" constant="20" id="Y7K-F8-MQ9"/>
+                            <constraint firstAttribute="bottom" secondItem="FaE-lU-clW" secondAttribute="bottom" constant="20" symbolic="YES" id="3zo-Kd-FQF"/>
+                            <constraint firstItem="FaE-lU-clW" firstAttribute="top" secondItem="e9v-pq-uPi" secondAttribute="bottom" constant="13" id="4L1-x4-61U"/>
+                            <constraint firstItem="e9v-pq-uPi" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="Ib6-Zl-fZI"/>
+                            <constraint firstAttribute="trailing" secondItem="e9v-pq-uPi" secondAttribute="trailing" constant="20" symbolic="YES" id="K3n-uV-Tlq"/>
+                            <constraint firstItem="e9v-pq-uPi" firstAttribute="leading" secondItem="FaE-lU-clW" secondAttribute="leading" id="l3x-2O-Yn6"/>
+                            <constraint firstItem="e9v-pq-uPi" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="pGO-xb-ltz"/>
+                            <constraint firstItem="FaE-lU-clW" firstAttribute="trailing" secondItem="e9v-pq-uPi" secondAttribute="trailing" id="rOQ-qP-nld"/>
                         </constraints>
                     </view>
                     <connections>
